@@ -14,9 +14,7 @@ import org.bot.nullbot.command.Command;
 import org.bot.nullbot.component.render.HtmlRenderer;
 import org.bot.nullbot.component.resource.ResourceLoader;
 import org.bot.nullbot.config.prop.FileStorageProperties;
-import org.bot.nullbot.entity.CommandEvent;
 import org.bot.nullbot.entity.info.FileInfo;
-import org.bot.nullbot.exception.NullBotLogException;
 import org.bot.nullbot.exception.NullBotMsgException;
 import org.bot.nullbot.util.DownloadUtil;
 import org.bot.nullbot.util.FileUtil;
@@ -39,92 +37,87 @@ public class SymmetryCommand implements Command
     private final HtmlRenderer htmlRenderer;
 
     @Override
-    public void execute(Bot bot, CommandEvent<?> event) {
-        if (event.getEvent() instanceof GroupMessageEvent groupMessageEvent) {
-            List<String> params = event.getCommandParameters();
-            Long groupId = groupMessageEvent.getGroupId();
+    public void execute(Bot bot, GroupMessageEvent event, List<String> params) {
+        Long groupId = event.getGroupId();
+        List<String> urls = new ArrayList<>();
 
-            List<String> urls = new ArrayList<>();
+        // 引用收集
+        ArrayMsg reply = event.getArrayMsg().getFirst();
+        if (reply.getType() == MsgTypeEnum.reply) {
+            GetMsgResp replyMsg = bot.getMsg(Integer.parseInt(reply.getData().get("id"))).getData();
+            Map<String, String> imageMap = MessageParseUtil.parseGroupRawMessageAsImageMap(replyMsg.getRawMessage());
+            urls.addAll(imageMap.values());
+        }
 
-            // 引用收集
-            ArrayMsg reply = groupMessageEvent.getArrayMsg().getFirst();
-            if (reply.getType() == MsgTypeEnum.reply) {
-                GetMsgResp replyMsg = bot.getMsg(Integer.parseInt(reply.getData().get("id"))).getData();
-                Map<String, String> imageMap = MessageParseUtil.parseGroupRawMessageAsImageMap(replyMsg.getRawMessage());
-                urls.addAll(imageMap.values());
-            }
-
-            // ID 收集 AT 收集
-            if (!params.isEmpty()) {
-                try {
-                    if (List.of("左", "右", "上", "下").contains(params.getFirst())) {
-                        if (params.size() > 1) {
-                            long qqNumber = Long.parseLong(params.get(1));
-                            urls.add(ShiroUtils.getUserAvatar(qqNumber, 5));
-                        } else {
-                            List<Long> qqNumbers = MessageParseUtil.extractAtQQNumbers(groupMessageEvent.getRawMessage());
-                            for (Long number : qqNumbers) urls.add(ShiroUtils.getUserAvatar(number, 5));
-                        }
-                    } else {
-                        long qqNumber = Long.parseLong(params.get(0));
+        // ID 收集 AT 收集
+        if (!params.isEmpty()) {
+            try {
+                if (List.of("左", "右", "上", "下").contains(params.getFirst())) {
+                    if (params.size() > 1) {
+                        long qqNumber = Long.parseLong(params.get(1));
                         urls.add(ShiroUtils.getUserAvatar(qqNumber, 5));
+                    } else {
+                        List<Long> qqNumbers = MessageParseUtil.extractAtQQNumbers(event.getRawMessage());
+                        for (Long number : qqNumbers) urls.add(ShiroUtils.getUserAvatar(number, 5));
                     }
-                } catch (NumberFormatException e) {
-                    throw new NullBotMsgException("[对称] ❌参数格式错误");
+                } else {
+                    long qqNumber = Long.parseLong(params.get(0));
+                    urls.add(ShiroUtils.getUserAvatar(qqNumber, 5));
                 }
-            } else {
-                List<Long> qqNumbers = MessageParseUtil.extractAtQQNumbers(groupMessageEvent.getRawMessage());
-                for (Long number : qqNumbers) urls.add(ShiroUtils.getUserAvatar(number, 5));
+            } catch (NumberFormatException e) {
+                throw new NullBotMsgException("[对称] ❌参数格式错误");
             }
+        } else {
+            List<Long> qqNumbers = MessageParseUtil.extractAtQQNumbers(event.getRawMessage());
+            for (Long number : qqNumbers) urls.add(ShiroUtils.getUserAvatar(number, 5));
+        }
 
-            if (urls.isEmpty())
-                throw new NullBotMsgException("[对称] ❌无引用图片或ID参数或At消息");
+        if (urls.isEmpty())
+            throw new NullBotMsgException("[对称] ❌无引用图片或ID参数或At消息");
 
-            // 开始处理
-            String tempFilePath = fileStorageProperties.getTempPath();
-            for (String url : urls) {
-                String tempFileName = UUID.randomUUID().toString();
-                String downloadedFileName;
-                try {
-                    FileInfo fileInfo = DownloadUtil.downloadFile(url, tempFilePath, tempFileName, "\t\t\t\t├─ ");
-                    downloadedFileName = fileInfo.getFileName();
-                } catch (Exception e) {
-                    throw new NullBotMsgException("[对称] ❌下载时出错: " + e.getMessage());
-                }
-                String imagePath = tempFilePath + "/" + downloadedFileName;
-                String base64;
-                try {
-                    Path htmlPath = resourceLoader.getCached("static/html/symmetry.html", tempFilePath + "/html");
-                    Map<String, String> variables = new HashMap<>();
-                    variables.put("mode", "left");
-                    if (!params.isEmpty()) {
-                        switch (params.getFirst()) {
-                            case "左" -> variables.put("mode", "left");
-                            case "右" -> variables.put("mode", "right");
-                            case "上" -> variables.put("mode", "top");
-                            case "下" -> variables.put("mode", "bottom");
-                        }
+        // 开始处理
+        String tempFilePath = fileStorageProperties.getTempPath();
+        for (String url : urls) {
+            String tempFileName = UUID.randomUUID().toString();
+            String downloadedFileName;
+            try {
+                FileInfo fileInfo = DownloadUtil.downloadFile(url, tempFilePath, tempFileName, "\t\t\t\t├─ ");
+                downloadedFileName = fileInfo.getFileName();
+            } catch (Exception e) {
+                throw new NullBotMsgException("[对称] ❌下载时出错: " + e.getMessage());
+            }
+            String imagePath = tempFilePath + "/" + downloadedFileName;
+            String base64;
+            try {
+                Path htmlPath = resourceLoader.getCached("static/html/symmetry.html", tempFilePath + "/html");
+                Map<String, String> variables = new HashMap<>();
+                variables.put("mode", "left");
+                if (!params.isEmpty()) {
+                    switch (params.getFirst()) {
+                        case "左" -> variables.put("mode", "left");
+                        case "右" -> variables.put("mode", "right");
+                        case "上" -> variables.put("mode", "top");
+                        case "下" -> variables.put("mode", "bottom");
                     }
-                    Map<String, String> images = new HashMap<>();
-                    images.put("image", imagePath);
-                    String html = HtmlTemplateUtil.loadTemplate(htmlPath.toString());
-                    html = HtmlTemplateUtil.replaceVariables(html, variables);
-                    html = HtmlTemplateUtil.replaceImages(html, images);
-                    base64 = htmlRenderer.renderElement(html, "#mirrorContainer");
-                } catch (NullBotMsgException e) {
-                    throw e;
-                } catch (Exception e) {
-                    throw new NullBotMsgException("[对称] ❌处理时出错: " + e.getMessage());
-                } finally {
-                    FileUtil.deleteFileByName(tempFilePath, downloadedFileName);
                 }
-                String response = MsgUtils.builder().img("base64://" + base64).build();
-                bot.sendGroupMsg(groupId, response, false);
-                log.info("\t\t\t\t├─[Symmetry] 处理完成 - {}", downloadedFileName);
+                Map<String, String> images = new HashMap<>();
+                images.put("image", imagePath);
+                String html = HtmlTemplateUtil.loadTemplate(htmlPath.toString());
+                html = HtmlTemplateUtil.replaceVariables(html, variables);
+                html = HtmlTemplateUtil.replaceImages(html, images);
+                base64 = htmlRenderer.renderElement(html, "#mirrorContainer");
+
+            } catch (NullBotMsgException e) {
+                throw e;
+            } catch (Exception e) {
+                throw new NullBotMsgException("[对称] ❌处理时出错: " + e.getMessage());
+            } finally {
+                FileUtil.deleteFileByName(tempFilePath, downloadedFileName);
             }
-            // bot.sendGroupMsg(groupMessageEvent.getGroupId(), "[对称] ✅全部处理完成！", false);
-        }else
-            throw new NullBotLogException("[对称] ❌未设计 - 非群消息事件响应方式");
+            String response = MsgUtils.builder().img("base64://" + base64).build();
+            bot.sendGroupMsg(groupId, response, false);
+            log.info("\t\t\t\t├─[Symmetry] 处理完成 - {}", downloadedFileName);
+        }
     }
 
     @Override
